--- a/mods/gra/mod.yaml
+++ b/mods/gra/mod.yaml
@@ -126,11 +126,11 @@ ChromeLayout:
 
 Weapons:
 	ra|weapons/explosions.yaml
-	ra|weapons/ballistics.yaml
-	ra|weapons/missiles.yaml
+	gra|weapons/ballistics.yaml
+	gra|weapons/missiles.yaml
 	ra|weapons/other.yaml
 	gra|weapons/smallcaliber.yaml
-	ra|weapons/superweapons.yaml
+	gra|weapons/superweapons.yaml
 	
 Voices:
 	ra|audio/voices.yaml
