--- a/mods/gra/rules/infantry.yaml
+++ b/mods/gra/rules/infantry.yaml
@@ -296,7 +296,7 @@ E6:
 		Weapon: Shotgun
 	Armament@GARRISONED:
 		Name: garrisoned
-		Weapon: Shotgun
+		Weapon: Vulcan
 		MuzzleSequence: garrison-muzzle
 	ProducibleWithLevel:
 		Prerequisites: barracks.upgraded
