Temporary bug fixes for build testing
e6 display as e1
waterbombers display as migs

--- a/mods/gra/rules/aircraft.yaml
+++ b/mods/gra/rules/aircraft.yaml
@@ -206,6 +206,8 @@ WATERBOMBER:
 		Prerequisites: aircraft.upgraded
 	Rearmable:
 		RearmActors: afld, afld.ukraine
+	RenderSprites:
+		Image: mig
 		
 YAK:
 	Inherits: ^Plane
