Updated rules, build error fixes
Firebombers require ammo
Changed Races to ClassName
Added accurate shooting sequences for engineers
Added sequences for c1 as same as STAND, not accurate!
Removed RenderSprites for SCUDAtomic

--- a/mods/gra/rules/aircraft.yaml
+++ b/mods/gra/rules/aircraft.yaml
@@ -441,6 +441,7 @@ FIREBOMBER:
 	Armament:
 		Weapon: FireballLauncher
 		LocalOffset: 512,0,0
+        PauseOnCondition: !ammo
 	AttackAircraft:
 		FacingTolerance: 20
 	Aircraft:
