--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 user.config
-engine
-bin
-obj
-mods/*/*.dll
-mods/*/*.mdb
-mods/*/*.pdb
-/*.dll
-/*.dll.config
-/*.so
-/*.dylib
-/*.pdb
-/*.mdb
-/*.exe
+#engine
+#bin
+#obj
+#mods/*/*.dll
+#mods/*/*.mdb
+#mods/*/*.pdb
+#/*.dll
+#/*.dll.config
+#/*.so
+#/*.dylib
+#/*.pdb
+#/*.mdb
+#/*.exe
 DOCUMENTATION.md
 Lua-API.md
 StyleCopViolations.xml
