--- a/mods/gra/mod.yaml
+++ b/mods/gra/mod.yaml
@@ -80,6 +80,7 @@ Chrome:
 Assemblies:
 	common|OpenRA.Mods.Common.dll
 	common|OpenRA.Mods.Cnc.dll
+    gra|OpenRA.Mods.Gra.dll
 
 ChromeLayout:
 	common|chrome/ingame.yaml
