--- a/mod.config
+++ b/mod.config
@@ -102,7 +102,8 @@ PACKAGING_OVERWRITE_MOD_VERSION="True"
 AUTOMATIC_ENGINE_MANAGEMENT="True"
 
 # The URL to download the engine files from when AUTOMATIC_ENGINE_MANAGEMENT is enabled.
-AUTOMATIC_ENGINE_SOURCE="https://github.com/OpenRA/OpenRA/archive/${ENGINE_VERSION}.zip"
+AUTOMATIC_ENGINE_SOURCE="https://github.com/Phabbits/Geoff-Red-Alert_Engine/archive/master.zip"
+#https://github.com/OpenRA/OpenRA/archive/${ENGINE_VERSION}.zip"
 
 # Temporary file/directory names used by automatic engine management.
 # Paths outside the SDK directory are not officially supported.
