--- a/mods/gra/rules/civilian.yaml
+++ b/mods/gra/rules/civilian.yaml
@@ -147,6 +147,11 @@ HOSP:
 
 ^CIVGARR
     Inherits: ^CivBuilding
+    RevealsShroud:
+		Range: 6c0
+		RevealGeneratedShroud: False
+	RevealsShroud@GAPGEN:
+		Range: 5c0
     CaptureManager:
 	Capturable:
 		Types: building
@@ -166,6 +171,11 @@ HOSP:
 
 ^DesertCIVGARR
     Inherits: ^DesertCivBuilding
+    RevealsShroud:
+		Range: 6c0
+		RevealGeneratedShroud: False
+	RevealsShroud@GAPGEN:
+		Range: 5c0
     CaptureManager:
 	Capturable:
 		Types: building
