--- a/mods/gra/rules/civilian.yaml
+++ b/mods/gra/rules/civilian.yaml
@@ -147,6 +147,14 @@ HOSP:
 
 ^CIVGARR
     Inherits: ^CivBuilding
+    Inherits@AUTOTARGET: ^AutoTargetAll
+    Armor:
+		Type: Heavy
+	RevealsShroud:
+		Range: 6c0
+		RevealGeneratedShroud: False
+	RevealsShroud@GAPGEN:
+		Range: 5c0
     CaptureManager:
 	Capturable:
 		Types: building
@@ -166,6 +174,14 @@ HOSP:
 
 ^DesertCIVGARR
     Inherits: ^DesertCivBuilding
+    Inherits@AUTOTARGET: ^AutoTargetAll
+    Armor:
+		Type: Heavy
+	RevealsShroud:
+		Range: 6c0
+		RevealGeneratedShroud: False
+	RevealsShroud@GAPGEN:
+		Range: 5c0
     CaptureManager:
 	Capturable:
 		Types: building
